--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,9 @@ jobs:
       - store_test_results:
           path: ~/
 
+      - store_artifacts:
+          path: ~/build/contracts
+
 workflows:
   version: 2
   build_test:
