--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,13 +45,38 @@ jobs:
             sleep 8 &&
             truffle test --network local &&
             cd; sed -i '/.*reporter/ s/spec/mocha-junit-reporter/g' truffle.js; truffle test --network local
-
+      
       - store_test_results:
           path: ~/
 
       - store_artifacts:
           path: ~/build/contracts
+      
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - ./
 
+  deploy:
+    docker:
+      - image: zakred/circleci:node8-truffle
+    working_directory: ~
+    steps:
+      - attach_workspace:
+          at: ~/
+
+      - run:
+          name: Deploy to Rinkeby
+          command: DEPLOY_PRIVATE_KEY=$DEPLOY_PRIVATE_KEY truffle migrate --network rinkeby 2>&1 | tee deploy.info
+
+      - run:
+          name: Update CI Environment Variables of Staxe API build job, so we will have always the latest deployed version.
+          command: |
+            TOKEN_CONTRACT=$(grep StaxeToken: deploy.info | awk '{printf $2}')
+            PLATFORM_CONTRACT=$(grep StaxePlatform: deploy.info | awk '{printf $2}')
+            curl -X POST --header 'Content-Type: application/json' -d '{"name":"PLATFORM_CONTRACT_ADDRESS", "value":"$PLATFORM_CONTRACT"}' $CI_API_URL
+            curl -X POST --header 'Content-Type: application/json' -d '{"name":"TOKEN_CONTRACT_ADDRESS", "value":"$TOKEN_CONTRACT"}' $CI_API_URL
+    
 workflows:
   version: 2
   build_test:
