Only deploy to branch master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,3 +85,10 @@ workflows:
       - test:
           requires:
             - build
+      - deploy:
+          filters:
+            branches:
+              only:
+                - master
+          requires:
+            - test
